syntax = "proto3";

option go_package = "github.com/chutommy/user-microservice/pkg/grpc/userpb;userpb";

package user;

import "user_message.proto";
import "google/api/annotations.proto";

service UserService {
  rpc RegisterUser (RegisterUserRequest) returns (RegisterUserResponse) {
    option (google.api.http) = {
      post: "/v1/user/register"
      body: "*"
    };
  };

  rpc GetUser (GetUserRequest) returns (GetUserResponse) {
    option (google.api.http) = {
      get: "/v1/user/search"
    };
  };
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse) {
    option (google.api.http) = {
      put: "/v1/user/update"
      body: "*"
    };
  };

  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse) {
    option (google.api.http) = {
      delete: "/v1/user/delete"
    };
  };
}

message RegisterUserRequest {
  User user = 1;
}

message RegisterUserResponse {
  string id = 1;
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  User user = 1;
}

message UpdateUserRequest {
  string id = 1;
  User user = 2;
}

message UpdateUserResponse {
  string id = 1;
}

message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {
  string id = 1;
}
